tests/baselines/reference/parserErrantEqualsGreaterThanAfterFunction2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction2.ts(1,15): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction2.ts(1,18): error TS1144: '{' or ';' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction2.ts(1,21): error TS2304: Cannot find name 'p'.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction2.ts (3 errors) ====
    function f(p: A) => p;
                  ~
!!! error TS2304: Cannot find name 'A'.
                     ~~
!!! error TS1144: '{' or ';' expected.
                        ~
!!! error TS2304: Cannot find name 'p'.